# protools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yaml
data/: 4zqk.cif  8DGR.cif  ab1218_0.a3m  ab1218_1.a3m  ab1218_2.a3m  ab1218_2_cliped.a3m  fasta.md5  seq_list.txt  test.fasta  test_dna.fasta  test_dna.optimized.fasta  test_dna.protein.standard.fasta  test_dna.protein.yeast.fasta  test_protein.dna.standard.fasta  test_protein.dna.yeast.fasta  test_protein.fasta  test_protein.rna.standard.fasta  test_protein.rna.yeast.fasta  test_rna.fasta  test_rna.protein.standard.fasta  test_rna.protein.yeast.fasta  vdomain.fasta  vdomain_anno.csv
protools/: __init__.py  aa.py  cdhit.py  df2fasta.py  dock.py  pdbanno.py  pdbconvert.py  pdbextract.py  pdbfixer.py  pdbio.py  pdbio.pyi  pdbplot.py  pdbrenumber.py  sasa.py  seqanno.py  seqconvert.py  seqfilter.py  seqfixer.py  seqio.py  seqio.pyi  seqplot.py  typedef.py  utils.py
protools/cluster/: __init__.py  cdhit.py  mmseqs.py
protools/database/: __init__.py  patent.py  uniprot.py
protools/dataset/: split.py
test/: __init__.py  test_aa.py  test_dock.py  test_pdbanno.py  test_pdbextract.py  test_pdbfixer.py  test_pdbio.py  test_seqanno.py  test_seqconvert.py  test_seqfilter.py  test_seqfixer.py  test_seqio.py  test_seqplot.py  test_utils.py  tools.py
test/cluster/: test_cdhit.py  test_mmseqs.py
test/database/: test_patent.py  test_uniprot.py
test/dataset/: test_split.py
