[build-system]
requires = [
    "setuptools>=42",
    "versioneer[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "protools4py"
authors = [
    {name="Zhang.H.N", email="zhang.h.n@foxmail.com"}
]
description = "A simple python package for protein process"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "biopython",
    "pandas",
    "tqdm",
    "scipy",
    "dnachisel"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/GCS-ZHN/protools"
"Bug Tracker" = "https://github.com/GCS-ZHN/protools/issues"


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "protools/_version.py"
versionfile_build = "protools/_version.py"
tag_prefix = "v"
parentdir_prefix = "protools-"