[build-system]
requires = [
    "setuptools>=42",
    "versioneer[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "protools4py"
authors = [
    {name="Zhang.H.N", email="zhang.h.n@foxmail.com"}
]
description = "A simple python package for protein process"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.82",
    "pandas",
    "tqdm",
    "scipy",
    "dnachisel",
    "antpack>=0.3.8,<0.3.9",
    "requests",
    "seaborn",
    "dockq>=2.1.3",
    "pdbfixer",
    "prody>=2.6.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/GCS-ZHN/protools"
"Bug Tracker" = "https://github.com/GCS-ZHN/protools/issues"


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "protools/_version.py"
versionfile_build = "protools/_version.py"
tag_prefix = "v"
parentdir_prefix = "protools-"

[tool.uv.sources]
pdbfixer = { git = "https://github.com/openmm/pdbfixer.git", rev = "v1.11" }
prody = { git = "https://github.com/GCS-ZHN/ProDy.git", rev = "e5bc3bb917cf712660f715f27171f25fb6694721" }

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "ipykernel>=7.0.1",
    "pytest>=8.4.2",
]
